RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/36_0010/36_merged.txt
/home/dimpling/AutoSpec/out/36_0010/36_merged.c:60:5: error: unterminated comment
   60 |     /*@;
      |     ^
